# django-cursos

./: README.md
Django-Controle_Alugueis_by_Leticia-Lima/: Passo a passo.txt  db.sqlite3
Django-Controle_Alugueis_by_Leticia-Lima/base/templates/: base.html  navbar.html
Django-Controle_Alugueis_by_Leticia-Lima/myapp/: models.py
Livraria/: Passo-a-passo.txt  db.sqlite3  pyproject.toml
Livraria/core/: admin.py  models.py  serializer.py  views.py
Livraria/core/migrations/: 0001_initial.py  0002_autor.py  0003_livro_alter_autor_options.py  0004_livro_categoria_livro_editora_livro_preco_and_more.py  0005_livro_autores.py  0006_compra.py  0007_compra_status.py  0008_itenscompra.py
Livraria/core/views/: __init__.py  autor.py  categoria.py  categoriaApiView.py  categoriaClass.py  categoriaGeneric.py  editora.py  livro.py  testesIniciais.py
Livraria/livraria/: settings.py  urls.py
apiErp/: .gitignore  notes.txt
apiErp/accounts/: auth.py  models.py  serializers.py  urls.py
apiErp/accounts/migrations/: 0001_initial.py  (+1 more)
apiErp/companies/: models.py
apiErp/core/: settings.py
django-dio/: notes.txt
django-dio/core/: views.py
django-dio/hello_django/: settings.py  urls.py
django-dio/projeto01-hello-django/: notes.txt
django-dio/projeto02-agenda/: db.sqlite3  notes.txt
django-e-drf-artigo-dio/: db.sqlite3  requirements.txt
django-e-drf-artigo-dio/cursos/: admin.py  models.py  serializers.py
django-e-drf-artigo-dio/escola/: settings.py  urls.py
django-e-drf-livraria-basica/: db.sqlite3
django-e-drf-livraria-basica/books/: models.py
(+60 files in other folders)
